syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/HoangLong2502/pharmago_be/pb";

message DebtNote {
  int32 id = 1;
  string code = 2;
  string title = 3;
  string entity = 4;
  float money = 5;
  float paymented = 6;
  string note = 7;
  string type = 8;
  string status = 9;
  int32 company = 10;
  int32 user_created = 11;
  google.protobuf.Timestamp exprise = 12;
  google.protobuf.Timestamp dabt_note_at = 13;
  repeated DebtRepayment repayments = 14;
}

message DebtRepayment {
  int32 id = 1;
  string code = 2;
  float money = 3;
  int32 debt = 4;
  int32 user_created = 5;
  google.protobuf.Timestamp created_at = 6;
}