syntax = "proto3";

package pb;

option go_package = "github.com/HoangLong2502/pharmago_be/pb";

message SimpleData {
  int32 id = 1;
  string name = 2;
  string code = 3;
}
